css/password_strength.css
.password-strength-check {
  position: relative;
  /* Define colors to use in elements */
  --color-score-0: #FD5C56;
  --color-score-1: #FD5C56;
  --color-score-2: #F59500;
  --color-score-3: #90B70E;
  --color-score-4: #90B70E;
  --color-bar-bg: #e9e9e9;
  --color-left-border: #BBBBBB;
  /* Widen the core password field so the strength message fits underneath. */
  input.password-field {
    width: 25em;
  }
  /* Bar */
  .password-strength-strength-bar {
    /* Position the bar on top of the bottom border of the password field. */
    position: absolute;
    top: 0;
    z-index: 100;
    /* Set the bar and value indicator to the same height. */
    .bar,
    .value {
      height: 3px;
    }
    /* Set the initial bar color and ensure the value doesn't extend beyond. */
    .bar {
      position: relative;
      background-color: var(--color-bar-bg);
      overflow: hidden; 
    }
    /* Position the value indicator on top of the bar background and set
       transparent initial color */
    .value {
      position: absolute;
      top: 0;
      left: 0;
      width: 0;
      background-color: transparent;
      transition: width 0.75s cubic-bezier(0.785, 0.135, 0.15, 0.86), opacity 0.2s linear, background-color 0.75s linear;
      /* Set color of strength-bar */
      &.bg-score-0 { background-color: var(--color-score-0); }
      &.bg-score-1 { background-color: var(--color-score-1); }
      &.bg-score-2 { background-color: var(--color-score-2); }
      &.bg-score-3 { background-color: var(--color-score-3); }
      &.bg-score-4 { background-color: var(--color-score-4); }
    }
  }
  .password-strength-messages {
    border-left: 0.25em solid var(--color-left-border);
    margin-top: 0.5em;
    padding-left: 0.5em;
    .password-strength {
      border-left: unset;
      margin: unset;
    }
    /* Message: Strength */
    .password-strength-message-strength {
      margin-bottom: 9px;
      display: inline-flex;
      .name {
        margin-right: 0.25em;
      }
      .value {
        text-transform: capitalize;
        font-weight: bold;
      }
    }
    .check-mark {
      background: url("../images/check.png") no-repeat top left;
    }
    /* Message: Requirements */
    .password-strength-message-requirements .value {
      text-transform: capitalize;
      font-weight: bold;
    }
    /* Set colors of strength text. */
    .password-strength-message-strength,
    .password-strength-message-requirements {
      .value {
        &.text-score-0 { color: var(--color-score-0); }
        &.text-score-1 { color: var(--color-score-1); }
        &.text-score-2 { color: var(--color-score-2); }
        &.text-score-3 { color: var(--color-score-3); }
        &.text-score-4 { color: var(--color-score-4); }
      }
    }
    /* Message: Crack time */
    .password-strength-message-crack-time {
      display: inline-flex;
      .name {
        margin-right: 0.25em;
      }
    }
    /* Message: Flaws */
    .password-strength-message-flaws ul li {
      line-height: 1.5em;
    }
  }
}

